Fix css class and id naming convention

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <body>
 
-<div id = "allContent">
+<div id = "all-content">
 
 <div id = "header">
     <img id = "logo" src = "img/logo.png" alt="Logo"/>
-    <div id="tableOfContents">
+    <div id ="table-of-contents">
         <a href="#header" class="button nav">Home</a>
-        <a href="#modelSelection" class="button nav">Models</a>
+        <a href="#model-selection" class="button nav">Models</a>
         <a href="#iphone-15" class="button nav">iPhone 15</a>
         <a href="#iphone-15-pro" class="button nav">iPhone 15 Pro</a>
         <a href="#other-products" class="button nav">Other Products</a>
-        <a href="#finalConfiguration" class="button nav cart">Cart</a>
+        <a href="#final-configuration" class="button nav cart">Cart</a>
         <form>
             <input id="search" type="text" placeholder="Search..." name="search">
             <button type="submit" class="button nav search">Search</button>
@@ -29,9 +29,9 @@
 
 </div>
 
-<div id = "mainContent">
+<div>
     <br/>
-    <div id = "modelSelection">
+    <div id = "model-selection">
         <h2>SELECT YOUR MODEL</h2>
         <button class = "button black model">iPhone 15</button>
         <button class = "button black model">iPhone 15 Plus</button>
@@ -43,16 +43,16 @@
 
     <img class = "phone" src = "img/iPhone_15_Black.png" alt="iPhone 15 Black"/>
 
-    <div class = "phoneInfo">
-        <h2 class = "phoneName">iPhone 15 and 15 Plus</h2>
-        <div class = "colourSelection">
+    <div class = "phone-info">
+        <h2 class = "phone-name">iPhone 15 and 15 Plus</h2>
+        <div>
             <h2 class = "subheading">Select Colour</h2>
             <button class = "button colour-selection black"></button>
             <button class = "button colour-selection blue"></button>
             <button class = "button colour-selection yellow"></button>
             <button class = "button colour-selection pink"></button>
         </div>
-        <div class = "storageSelection">
+        <div>
             <h2 class = "subheading">Select Storage</h2>
             <button class = "button storage-selection">128 GB</button>
             <button class = "button storage-selection">256 GB</button>
@@ -62,7 +62,7 @@
         <p>iPhone 15 starts at $1129 and iPhone 15 Plus starts at $1279</p>
     </div>
 
-    <div class = "productDescription">
+    <div class = "product-description">
         <h2 class = "subheading">Product Description</h2>
         <p class = "description">The iPhone 15 series brings a whole new design featuring colour-infused back glass and a strong aluminum chassis.
             The beloved Dynamic Island provides a new way to interact with your notifications and background tasks. Its 6.1-inch
@@ -89,14 +89,14 @@
     <div id = "iphone-15-pro">
     <img class = "phone" src = "img/iPhone_15_Pro_Black_Titanium.png" alt="iPhone 15 Pro Black Titanium"/>
 
-    <div class = "phoneInfo">
-        <h2 class = "phoneName">iPhone 15 Pro and Pro Max</h2>
+    <div class = "phone-info">
+        <h2 class = "phone-name">iPhone 15 Pro and Pro Max</h2>
         <div>
             <h2 class = "subheading">Select Colour</h2>
-            <button class = "button colour-selection titanblack"></button>
-            <button class = "button colour-selection titanblue"></button>
-            <button class = "button colour-selection titannatural"></button>
-            <button class = "button colour-selection titanwhite"></button>
+            <button class = "button colour-selection titan-black"></button>
+            <button class = "button colour-selection titan-blue"></button>
+            <button class = "button colour-selection titan-natural"></button>
+            <button class = "button colour-selection titan-white"></button>
         </div>
         <div>
             <h2 class = "subheading">Select Storage</h2>
@@ -108,7 +108,7 @@
         <p>iPhone 15 Pro starts at $1449 and iPhone 15 Pro Max starts at $1749</p>
     </div>
 
-    <div class = "productDescription">
+    <div class = "product-description">
         <h2 class = "subheading">Product Description</h2>
         <p class = "description"> For the iPhone 15 Pro series, you can expect a new processor -- the remarkable A17 Pro. Say goodbye to the mute switch
             and hello to the Action button, where you could customize it to do over 10 different actions in a click. Plus, with the
@@ -131,7 +131,7 @@
     </div>
     </div>
 
-    <div id = "finalConfiguration">
+    <div id = "final-configuration">
         <h3>Your iPhone model has been chosen. Click here to add to your cart:</h3>
         <button class = "button black">ADD TO CART</button>
 
